# system-estv

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  update-version.sh
caddy/: Caddyfile
config/: vmagent.yml
config/grafana/provisioning/dashboards/: system-overview.json
config/grafana/provisioning/datasources/: datasource.yml
documentation/: ARCHITECTURE.md  CONTEXT.md  TODO.md
rust-exporter/: Cargo.toml  Dockerfile  rust-toolchain.toml
rust-exporter/src/: app.rs  collector.rs  handlers.rs  lib.rs  main.rs  metrics.rs  state.rs
rust-exporter/static/: index.html
rust-exporter/tests/: integration_test.rs
system-estv/: .gitignore  Cargo.toml  Dockerfile  build.rs
system-estv/.cargo/: config.toml
system-estv/src/: collector.rs  handlers.rs  main.rs  state.rs
system-estv/static/: index.html  version.json
