[package]
name = "rust-exporter"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_exporter"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
hostname = "0.4"
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
axum-test = "14"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true