[package]
name = "rust-exporter"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = "0.7"
sysinfo = "0.30"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true